Handled errors better
