# docs/swagger.json
@@ -50,12 +50,6 @@
                                 "$ref": "#/definitions/dto.ChatOutputDto"
                             }
                         }
-                    },
-                    "404": {
-                        "description": "Not found user",
-                        "schema": {
-                            "$ref": "#/definitions/httpexp.HttpExp"
-                        }
                     }
                 }
             }
@@ -83,12 +77,6 @@
                             "items": {
                                 "$ref": "#/definitions/dto.ChatOutputDto"
                             }
-                        }
-                    },
-                    "404": {
-                        "description": "Not found user",
-                        "schema": {
-                            "$ref": "#/definitions/httpexp.HttpExp"
                         }
                     }
                 }
@@ -136,6 +124,28 @@
                 }
             }
         },
+        "/api/chat/{chatId}/clear": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete all messages from chat",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chat"
+                ],
+                "summary": "Clear chat",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
         "/api/message/{chatId}/list": {
             "get": {
                 "security": [
@@ -178,14 +188,8 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.ChatOutputDto"
+                                "$ref": "#/definitions/dto.MessageOutputDto"
                             }
-                        }
-                    },
-                    "404": {
-                        "description": "Not found user",
-                        "schema": {
-                            "$ref": "#/definitions/httpexp.HttpExp"
                         }
                     }
                 }
@@ -223,12 +227,6 @@
                             "items": {
                                 "$ref": "#/definitions/dto.MessageOutputDto"
                             }
-                        }
-                    },
-                    "404": {
-                        "description": "Not found chat",
-                        "schema": {
-                            "$ref": "#/definitions/httpexp.HttpExp"
                         }
                     }
                 }
